refactor: Adjust hero layout and text styling

--- a/index.html
+++ b/index.html
@@ -8,20 +8,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Savannah Hilley</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Portfolio</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
     <section class="hero">
-        <img src="https://placehold.co/1200x400/bfa181/282828?text=Savannah+Hilley" alt="Hero image for Savannah Hilley">
-        <!-- Optional: Add text overlay here -->
+        <header>
+            <h1>Savannah Hilley</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Portfolio</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <img src="https://placehold.co/1200x400/bfa181/282828?text=Savannah+Hilley" alt="Hero image for Savannah Hilley" class="hero-bg-image">
+        <div class="hero-text">
+            <h2>Professional Model</h2>
+            <p>Based in Central Minnesota | Available Worldwide</p>
+            <!-- Optional: Add a call-to-action button -->
+            <!-- <a href="contact.html" class="cta-button">Book Now</a> -->
+        </div>
     </section>
 
     <main>
