feat: Implement JavaScript lightbox for gallery

--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
     </footer>
 
     <!-- Optional: Minimal JS for gallery interactions later -->
-    <!-- <script src="script.js"></script> -->
+    <script src="script.js"></script>
 </body>
 </html>
