refactor: Update gallery placeholders with varying aspect ratios

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     <main>
         <h2>Portfolio</h2>
         <section class="gallery">
-            <!-- Placeholder images will go here -->
-            <img src="https://placehold.co/400x300/bfa181/FFF?text=Portfolio+1" alt="Placeholder image 1 for Savannah Hilley portfolio">
-            <img src="https://placehold.co/400x300/282828/FFF?text=Portfolio+2" alt="Placeholder image 2 for Savannah Hilley portfolio">
-            <img src="https://placehold.co/400x300/bfa181/FFF?text=Portfolio+3" alt="Placeholder image 3 for Savannah Hilley portfolio">
-            <img src="https://placehold.co/400x300/282828/FFF?text=Portfolio+4" alt="Placeholder image 4 for Savannah Hilley portfolio">
-            <img src="https://placehold.co/400x300/bfa181/FFF?text=Portfolio+5" alt="Placeholder image 5 for Savannah Hilley portfolio">
-            <img src="https://placehold.co/400x300/282828/FFF?text=Portfolio+6" alt="Placeholder image 6 for Savannah Hilley portfolio">
+            <!-- Placeholder images with varying aspect ratios -->
+            <img src="https://placehold.co/400x500/bfa181/FFF?text=Portrait" alt="Placeholder image 1 (Portrait) for Savannah Hilley portfolio">
+            <img src="https://placehold.co/400x300/282828/FFF?text=Landscape" alt="Placeholder image 2 (Landscape) for Savannah Hilley portfolio">
+            <img src="https://placehold.co/400x400/bfa181/FFF?text=Square" alt="Placeholder image 3 (Square) for Savannah Hilley portfolio">
+            <img src="https://placehold.co/400x600/282828/FFF?text=Tall+Portrait" alt="Placeholder image 4 (Tall Portrait) for Savannah Hilley portfolio">
+            <img src="https://placehold.co/400x250/bfa181/FFF?text=Wide+Landscape" alt="Placeholder image 5 (Wide Landscape) for Savannah Hilley portfolio">
+            <img src="https://placehold.co/400x450/282828/FFF?text=Almost+Square" alt="Placeholder image 6 (Almost Square) for Savannah Hilley portfolio">
             <!-- Add more placeholders as needed -->
         </section>
     </main>
