refactor: Adjust hero height, add images to about page

--- a/about.html
+++ b/about.html
@@ -37,6 +37,12 @@
             <p>
                 Feel free to browse my <a href="index.html">portfolio</a> and get in touch via the <a href="contact.html">contact page</a> if you'd like to collaborate!
             </p>
+
+            <div class="about-gallery">
+                 <img src="https://placehold.co/300x400/cccccc/666?text=About+1" alt="Placeholder image 1 for About page">
+                 <img src="https://placehold.co/300x300/cccccc/666?text=About+2" alt="Placeholder image 2 for About page">
+                 <img src="https://placehold.co/300x450/cccccc/666?text=About+3" alt="Placeholder image 3 for About page">
+            </div>
         </section>
     </main>
 
