chore: Update hero text to Ryan Pederson

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </header>
         <img src="images/placeholder1.jpg" alt="Hero image for Savannah Hilley" class="hero-bg-image">
         <div class="hero-text">
-            <h2>Professional Model</h2>
+            <h2>Ryan Pederson</h2>
             <p>Based in Central Minnesota | Available Worldwide</p>
             <!-- Optional: Add a call-to-action button -->
             <!-- <a href="contact.html" class="cta-button">Book Now</a> -->
